<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#262626"
    android:orientation="vertical"
    tools:context="com.example.android.musicapp.LogIn">

    <LinearLayout style="@style/navMainLinearLayout">

        <LinearLayout style="@style/navLinearLayouts">

            <ImageView
                android:id="@+id/home"
                style="@style/navImages"
                android:src="@drawable/home_orange" />

            <TextView
                style="@style/navText"
                android:text="@string/home"
                android:textAlignment="center"
                android:textColor="#FAB520" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_nav"
            style="@style/navLinearLayouts">

            <ImageView
                android:id="@+id/search"
                style="@style/navImages"
                android:src="@drawable/search_white" />

            <TextView
                style="@style/navText"
                android:text="@string/search"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/radio_nav"
            style="@style/navLinearLayouts">

            <ImageView
                android:id="@+id/radio"
                style="@style/navImages"
                android:src="@drawable/radio_white" />

            <TextView
                style="@style/navText"
                android:text="@string/radio"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/playlist_nav"
            style="@style/navLinearLayouts">

            <ImageView
                android:id="@+id/play_list"
                style="@style/navImages"
                android:src="@drawable/playlist_white" />

            <TextView
                style="@style/navText"
                android:text="@string/playlist"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buy_nav"
            style="@style/navLinearLayouts">

            <ImageView
                android:id="@+id/buy"
                style="@style/navImages"
                android:src="@drawable/cart_white" />

            <TextView
                style="@style/navText"
                android:text="@string/buy"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/navLine" />

    <ScrollView
        style="@style/scrollViewMenu"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/explanationLogIn"
                android:text="@string/explanationHome"
                android:textAlignment="center" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/photo"
                    style="@style/mainPhotoHome"
                    android:src="@drawable/the_refrescos" />

                <TextView
                    android:id="@+id/title"
                    style="@style/mainNameSongHome"
                    android:text="@string/no_hay_playa"
                    android:textAlignment="center" />

                <TextView
                    style="@style/mainGroupSongHome"
                    android:layout_below="@id/title"
                    android:text="@string/the_refrescos"
                    android:textAlignment="center" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout style="@style/songMenuHome">

        <ImageView
            style="@style/imageSongMenuHome"
            android:src="@drawable/volume_white" />

        <ImageView
            style="@style/imageSongMenuHome"
            android:src="@drawable/previous_white" />

        <ImageView
            android:id="@+id/play"
            style="@style/imageSongMenuHome"
            android:src="@drawable/play_white" />

        <ImageView
            style="@style/imageSongMenuHome"
            android:src="@drawable/next_white" />

        <ImageView
            style="@style/imageSongMenuHome"
            android:src="@drawable/heart_white" />

    </LinearLayout>
</LinearLayout>
